gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-struct-target-features.rs
#[target_feature(enable = "avx")] // { dg-error "" "" { target *-*-* } }
struct Avx {}

fn main() {}

